src/objects/appsolutely__Negative_Information_DE_Director_Event__c.object
<CustomObject>
    <description>A CreditsafeCompanyNegativeInformationDEDirectorEventV2</description>
    <fields>
        <fullName>appsolutely__Code__c</fullName>
        <description>The code that corresponds to the event description.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Negative Information DE Director Event</relationshipLabel>
        <relationshipName>Negative_Information_DE_Director_Event</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date__c</fullName>
        <description>The date the negative event occurred/is registered.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Description__c</fullName>
        <description>The description of the negativeEvent that is raised against the entity.</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Name__c</fullName>
        <description>The name of the entity (in the case of DE, the company director/members of the board of owners) that has the negative information against them.</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Type__c</fullName>
        <description>A look up stating the type.  ‘P’ = Person.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Negative Information DE Director Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>DE Director Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negative Information DE Director Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>